2.2.6
 * IncomingStreamingConnection version check message wrong (CASSANDRA-11462)
 * DatabaseDescriptor should log stacktrace in case of Eception during seed provider creation (CASSANDRA-11312)
 * Use canonical path for directory in SSTable descriptor (CASSANDRA-10587)
 * Add cassandra-stress keystore option (CASSANDRA-9325)
 * Fix out-of-space error treatment in memtable flushing (CASSANDRA-11448).
 * Dont mark sstables as repairing with sub range repairs (CASSANDRA-11451)
 * Fix use of NullUpdater for 2i during compaction (CASSANDRA-11450)
 * Notify when sstables change after cancelling compaction (CASSANDRA-11373)
 * cqlsh: COPY FROM should check that explicit column names are valid (CASSANDRA-11333)
 * Add -Dcassandra.start_gossip startup option (CASSANDRA-10809)
 * Fix UTF8Validator.validate() for modified UTF-8 (CASSANDRA-10748)
 * Clarify that now() function is calculated on the coordinator node in CQL documentation (CASSANDRA-10900)
 * Fix bloom filter sizing with LCS (CASSANDRA-11344)
 * (cqlsh) Fix error when result is 0 rows with EXPAND ON (CASSANDRA-11092)
 * Fix intra-node serialization issue for multicolumn-restrictions (CASSANDRA-11196)
 * Non-obsoleting compaction operations over compressed files can impose rate limit on normal reads (CASSANDRA-11301)
 * Add missing newline at end of bin/cqlsh (CASSANDRA-11325)
 * Fix AE in nodetool cfstats (backport CASSANDRA-10859) (CASSANDRA-11297)
 * Unresolved hostname leads to replace being ignored (CASSANDRA-11210)
 * Fix filtering on non-primary key columns for thrift static column families
   (CASSANDRA-6377)
 * Only log yaml config once, at startup (CASSANDRA-11217)
 * Preserve order for preferred SSL cipher suites (CASSANDRA-11164)
 * Reference leak with parallel repairs on the same table (CASSANDRA-11215)
 * Range.compareTo() violates the contract of Comparable (CASSANDRA-11216)
 * Avoid NPE when serializing ErrorMessage with null message (CASSANDRA-11167)